Sprint commit with flex goals

--- a/less/global.less
+++ b/less/global.less
@@ -17,6 +17,10 @@ h1, h2, h3, h4, h5 {
   color: @header-font-color;
 }
 
+h1 {
+  font-size: 3.5rem;
+}
+
 h2 {
   font-size: 3.2rem;
 }
@@ -25,14 +29,23 @@ h3 {
   font-size: 2.8rem;
 }
 
-p {
-  font-size: 1.6rem;
-  line-height: 1.4;
+p,a {
+  .generalText;
+}
+
+b{
+  font-weight: bold;
+}
+
+img{
+  max-width: 100%;
+  height: auto;
 }
 
 .container {
   max-width: 800px;
   width: 100%;
-  margin: 0 auto;  
+  margin: 0 auto; 
+  height: auto; 
 }
 
