--- a/less/home-page.less
+++ b/less/home-page.less
@@ -11,21 +11,66 @@
     p {
       padding:0 15px;
     }
+
+    .introImg{
+      width: 100%;
+
+      animation-duration: 5s;
+
+      animation-name: slide;
+
+      img{
+        border-radius: 10px;
+      }
+    }
   
   }
 
   .space-images {
-    display: flex;
-    flex-wrap: wrap;
-    width: 100%;
 
-    img {
+    .div-space-images{
+      display: flex;
+      flex-wrap: wrap;
+      width: 100%;
+
+      animation-duration: 5s;
+
+      animation-name: slide;
+
+    
+    .imgBlast, .imgSky, .imgLaunch{
       width: 28%;
       margin: 20px 2.5%;
-      border-radius: 20px;
       height: 100%;
+    
+      img {
+        border-radius: 20px;
+      }
     }
+
+    .imgBlast{
+      @media @mobile{
+        display: flex;
+        width: 100%;
+
+          img{
+            width: 100%;
+          }
+      }
+    }
+
+    .imgSky, .imgLaunch{
+      @media @mobile{
+        display: none;
+      }
+    }
+
+
   }
+
+     
+}
+    
 
   .visit-planets {
     padding: 15px;
@@ -46,8 +91,21 @@
     display: flex;
     justify-content: center;
 
+    animation-duration: 5s;
+
+    animation-name: slide;
+
+    @media @mobile{
+      flex-direction: column-reverse;
+      padding: 15px;
+    }
+
     .walk-text {
       width: 50%;
+
+      @media @mobile{
+        width: 100%;
+      }
 
       h3 {
         margin-bottom: 10px;
@@ -58,12 +116,34 @@
       }
 
       .btn {
+        display: flex;
+        margin-top: 2%;
+        height: 10%;
+
+        @media @mobile{
+          margin: 0 auto;
+          justify-content: center;
+        }
+
+        button{
+          .generalText;
+          .createButton(25%, 100%, 5px, @main-border-color, @btn-bg-color, @wild-sand);
+          @media @mobile{
+            .createButton(100%, 100%, 5px, @main-border-color, @btn-bg-color, @wild-sand);
+            padding: 25px;
+          }
+        }
       }
     }
 
     .walk-img {
       width: 46%;
       margin-left: 4%;
+
+      @media @mobile{
+        width: 100%;
+        margin: 0 0 2% 0;
+      }
       
       img {
         width: 100%;
