--- a/less/navigation.less
+++ b/less/navigation.less
@@ -1,1 +1,33 @@
 // Navigation code here
+
+header {
+    .navContainer{
+        width: 100%;
+
+        background-color: @nav-bg;
+        font-family: @river-bend;
+        border-bottom: 1px solid @nav-border;
+
+        .navText{
+            width: 100%;
+            display: flex;
+            justify-content: center;
+        }
+
+        .navLinks {
+            width: 100%;
+        }
+
+        nav{
+            display: flex;
+            justify-content: center;
+
+            a{
+                text-decoration: none;
+                color: @main-font-color;
+                margin: 1%;
+                padding: 1%;
+            }
+        }
+    }
+}
