--- a/less/mixins.less
+++ b/less/mixins.less
@@ -1,1 +1,32 @@
 // Mixins Here
+
+.generalText(){
+    line-height: 1.4;
+    font-size: 1.6rem;
+  }
+
+.createButton(@width, @height, @b-radius, @border-color, @bg-color, @color){
+        width: @width;
+        height: @height;
+        border-radius: @b-radius;
+        border: 1px solid @border-color;
+        background-color: @bg-color;
+        color: @color;
+
+        &:hover{
+            background-color: @color;
+            color: @bg-color;
+        }
+}
+
+@keyframes slide{
+    from{
+        margin-left: 100%;
+        width: 300%;
+    }
+
+    to{
+        margin-left: 0%;
+        width: 100%;
+    }
+}
